# Teeoworlds-MRPG-discord

./: .env.example  .gitignore  CMakeLists.txt  LICENSE
cmake/: FindAsio.cmake  FindCrow.cmake  FindDPP.cmake  FindOpenSSL.cmake  FindZlib.cmake
libs/openssl/: VERSION
src/: command_dispatcher.cpp  command_dispatcher.h  main.cpp
src/config/: config.h  config_env.h
src/log/: logger.cpp  logger.h  logger_adapter.h
src/utility/: utils.cpp  utils.h
